--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hydrogen-starter",
   "private": true,
   "sideEffects": false,
-  "version": "1.5.0",
+  "version": "1.5.1",
   "type": "module",
   "scripts": {
     "dev": "shopify hydrogen dev --port 8080",
@@ -19,61 +19,61 @@
   ],
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@fingerprintjs/botd": "^1.9.1",
+    "@fingerprintjs/botd": "^2.0.0",
     "@headlessui/react": "2.2.4",
     "@headlessui/tailwindcss": "^0.2.2",
     "@pack/client": "^1.0.3",
     "@pack/hydrogen": "^2.1.0",
     "@pack/react": "^3.1.1",
     "@pack/types": "^0.1.3",
-    "@remix-run/react": "^2.16.5",
-    "@shopify/cli": "^3.78.1",
+    "@remix-run/react": "^2.17.2",
+    "@shopify/cli": "^3.87.4",
     "@shopify/cli-hydrogen": "9.0.8",
     "@shopify/hydrogen": "2025.1.3",
     "@shopify/hydrogen-react": "2025.1.3",
     "@shopify/mini-oxygen": "3.1.1",
-    "@shopify/remix-oxygen": "^2.0.12",
+    "@shopify/remix-oxygen": "2.0.12",
     "clsx": "^2.1.1",
-    "country-region-data": "^3.1.0",
+    "country-region-data": "^4.0.0",
     "crypto-js": "^4.2.0",
-    "fast-xml-parser": "^4.5.0",
-    "graphql": "^16.11.0",
+    "fast-xml-parser": "^5.3.2",
+    "graphql": "^16.12.0",
     "hex-to-rgba": "^2.0.1",
-    "isbot": "^5.1.6",
+    "isbot": "^5.1.32",
     "lodash": "^4.17.21",
-    "markdown-to-jsx": "^7.4.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "markdown-to-jsx": "^9.1.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-fast-marquee": "^1.6.5",
-    "react-intersection-observer": "^9.16.0",
+    "react-intersection-observer": "^10.0.0",
     "react-markdown": "^10.1.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "sanitize-html": "^2.17.0",
     "schema-dts": "^1.1.5",
-    "snakecase-keys": "^8.0.1",
-    "swiper": "^11.2.7",
+    "snakecase-keys": "^9.0.2",
+    "swiper": "^12.0.3",
     "tiny-invariant": "^1.3.3",
-    "uuid": "^11.1.0"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.6",
-    "@remix-run/dev": "^2.16.5",
-    "@remix-run/eslint-config": "^2.16.5",
-    "@remix-run/fs-routes": "^2.16.7",
-    "@remix-run/route-config": "^2.16.7",
-    "@shopify/eslint-plugin": "^48.0.2",
-    "@shopify/hydrogen-codegen": "^0.3.2",
-    "@shopify/oxygen-workers-types": "^4.1.6",
+    "@graphql-codegen/cli": "5.0.7",
+    "@remix-run/dev": "^2.17.2",
+    "@remix-run/eslint-config": "^2.17.2",
+    "@remix-run/fs-routes": "^2.17.2",
+    "@remix-run/route-config": "^2.17.2",
+    "@shopify/eslint-plugin": "48.0.2",
+    "@shopify/hydrogen-codegen": "^0.3.3",
+    "@shopify/oxygen-workers-types": "^4.2.0",
     "@shopify/prettier-config": "^1.1.4",
     "@types/crypto-js": "^4.2.2",
-    "@types/eslint": "^8.4.10",
+    "@types/eslint": "^9.6.1",
     "@types/grecaptcha": "^3.0.9",
     "@types/gtag.js": "^0.0.20",
-    "@types/lodash": "^4.17.17",
-    "@types/node": "^22.15.21",
-    "@types/react": "^19.1.5",
-    "@types/react-dom": "^19.1.5",
+    "@types/lodash": "^4.17.21",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/sanitize-html": "^2.16.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/parser": "5.62.0",
@@ -85,14 +85,14 @@
     "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-refresh": "0.4.19",
     "eslint-plugin-tailwindcss": "3.18.0",
-    "jest": "^29.7.0",
-    "postcss": "^8.5.3",
-    "postcss-import": "^16.1.0",
-    "postcss-preset-env": "^10.1.6",
-    "prettier": "^3.5.3",
-    "set-cookie-parser": "^2.7.1",
+    "jest": "^30.2.0",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
+    "postcss-preset-env": "^10.4.0",
+    "prettier": "^3.6.2",
+    "set-cookie-parser": "^2.7.2",
     "tailwindcss": "3.4.17",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.3",
     "vite": "5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
   },
